# vaultspec-dashboard

./: .env.example  .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  .pymarkdown.json  .release-please-manifest.json  README.md  all-errors.txt  dist-workspace.toml  justfile  lychee.toml  mise.toml  pyproject.toml  release-please-config.json  typos.toml
.github/: release-build-setup.yml
engine/: CHANGELOG.md  Cargo.toml  deny.toml  rust-toolchain.toml
engine/crates/engine-graph/: Cargo.toml
engine/crates/engine-graph/src/: asof.rs  context.rs  diff.rs  edges.rs  facets.rs  graph.rs  index.rs  lib.rs  project.rs  watch.rs
engine/crates/engine-graph/src/index/: mod.rs  tests.rs
engine/crates/engine-graph/tests/: rederive_test.rs
engine/crates/engine-model/: Cargo.toml
engine/crates/engine-model/src/: id.rs  lib.rs  packages.rs
engine/crates/engine-query/: Cargo.toml
engine/crates/engine-query/benches/: salience_bench.rs
engine/crates/engine-query/src/: code.rs  embeddings.rs  envelope.rs  events.rs  features.rs  filter.rs  graph.rs  lib.rs  lineage.rs  node.rs  ontology.rs  pipeline.rs  salience.rs
engine/crates/engine-query/src/filter/: mod.rs  tests.rs
engine/crates/engine-query/src/graph/: mod.rs  tests.rs
engine/crates/engine-query/src/salience/: mod.rs  ontology.rs  tests.rs
engine/crates/engine-query/tests/: bridge_dead_end_repro.rs  derivation_labeling.rs  query_hotpaths.rs
engine/crates/engine-store/: Cargo.toml
engine/crates/engine-store/src/: events.rs  lib.rs
engine/crates/ingest-code/: Cargo.toml
engine/crates/ingest-code/examples/: scan.rs
engine/crates/ingest-code/queries/: python.scm  rust.scm  typescript.scm
engine/crates/ingest-code/src/: extract.rs  fingerprint.rs  lang.rs  lib.rs  modules.rs  resolve.rs  walk.rs
engine/crates/ingest-core/: Cargo.toml
engine/crates/ingest-core/src/: graph_v2.rs  inventory.rs  lib.rs  runner.rs
engine/crates/ingest-core/tests/: fixtures_test.rs
engine/crates/ingest-core/tests/fixtures/: vault-feature-list.json  vault-graph-v2.json  vault-list.json  vault-stats.json
engine/crates/ingest-git/: Cargo.toml
engine/crates/ingest-git/src/: branches.rs  correlate.rs  file_tree.rs  lib.rs  log.rs  workspace.rs  worktrees.rs
engine/crates/ingest-struct/: Cargo.toml
engine/crates/ingest-struct/src/: extract.rs  lib.rs  plan_structure.rs  reader.rs  resolve.rs
engine/crates/ingest-struct/tests/: pipeline_test.rs
engine/crates/rag-client/: Cargo.toml
engine/crates/rag-client/src/: client.rs  control.rs  discover.rs  lib.rs  search.rs  vectors.rs
engine/crates/vaultspec-api/: Cargo.toml
engine/crates/vaultspec-api/src/: a2a_run_leases.rs  app.rs  boot.rs  bounded_child.rs  discovery.rs  graph_delta.rs  handshake.rs  lib.rs  registry.rs  row_delta.rs  search_bounds.rs  seat.rs  vault_rows.rs
engine/crates/vaultspec-api/src/app/: code_graph.rs  tests.rs
engine/crates/vaultspec-api/src/authoring/: actor_tokens.rs  actors.rs  api.rs  apply.rs  approvals.rs  comments.rs  conflicts.rs  core_adapter.rs  direct_write.rs  documents.rs  events.rs  executor.rs  feedback.rs  http.rs  interrupts.rs  langgraph.rs  leases.rs  ledger.rs  mod.rs  model.rs  modes.rs  operations.rs  permissions.rs  policy.rs  principal.rs  projections.rs  proposal.rs  rebase.rs  response.rs  review.rs  rollback.rs  rollback_inverses.rs  routes.rs  sections.rs  security.rs  session.rs  snapshots.rs  stream.rs  tools.rs  transitions.rs  (+1 more)
engine/crates/vaultspec-api/tests/: authoring_p42a_acceptance.rs  authoring_vertical_slices.rs  code_corpus.rs  code_files.rs  declared_tier_parity.rs  feature_coverage_routes.rs  file_tree.rs  langgraph_authoring_fixture.rs  production_feature_purity.rs  rag_live_search.rs  salience_routes.rs  search_routes.rs
engine/crates/vaultspec-cli/: Cargo.toml
engine/crates/vaultspec-cli/src/: envelope.rs  main.rs
engine/crates/vaultspec-cli/tests/: app_home_agreement.rs  cli_test.rs  seat_matrix.rs
engine/crates/vaultspec-cli/wix/: main.wxs
engine/crates/vaultspec-distribution-authority/: Cargo.toml
engine/crates/vaultspec-distribution-authority/src/: lib.rs  materialization.rs  private_directory.rs  product_scope.rs  publication.rs  tests.rs  tests_adversarial.rs
engine/crates/vaultspec-product/: Cargo.toml
engine/crates/vaultspec-product/src/: bootstrap.rs  channels.rs  cohort.rs  control.rs  credentials.rs  discovery.rs  gateway_drain.rs  generation.rs  handoff.rs  hex.rs  lib.rs  lifecycle.rs  locking.rs  manifest.rs  materializer.rs  migration.rs  paths.rs  process.rs  product_build.rs  protocol.rs  provisioning.rs  receipt.rs  recovery.rs  snapshot.rs  transaction.rs
engine/crates/vaultspec-product/tests/: a2a_contract_check.rs  cohort.rs  desktop_gateway.rs  generation_authority.rs  interruption_recovery.rs  lifecycle_ownership.rs  product_authority.rs  product_build.rs  snapshot_group.rs  update_transaction.rs
engine/crates/vaultspec-release-fixtures/: Cargo.toml
engine/crates/vaultspec-release-fixtures/src/: lib.rs
engine/crates/vaultspec-release-verify/: Cargo.toml
engine/crates/vaultspec-release-verify/src/: main.rs
engine/crates/vaultspec-release-verify/tests/: fixed_refusal.rs
engine/crates/vaultspec-session/: Cargo.toml
engine/crates/vaultspec-session/src/: app_home.rs  lib.rs  schema.rs  session.rs  settings.rs  settings_schema.rs  store.rs
engine/crates/vaultspec-session/tests/: registry_test.rs  store_test.rs
engine/crates/vaultspec-updater/: Cargo.toml  build.rs
engine/crates/vaultspec-updater/src/: handoff.rs  lib.rs  main.rs
engine/crates/vaultspec-updater/tests/: execute_drive.rs  execute_intent.rs  relaunch_probe.rs  runner.rs  updater_process.rs  windows_replacement.rs
engine/crates/vaultspec-windows-authority/: Cargo.toml
engine/crates/vaultspec-windows-authority/src/: install.rs  lib.rs  os.rs  private_file.rs  private_policy.rs  snapshot.rs  tests.rs
engine/tests/: Cargo.toml
engine/tests/src/: lib.rs
engine/tests/tests/: bench.rs  conformance.rs  degradation_adversarial.rs  e2e.rs  scale_bench.rs
(+5402 files in other folders)
