[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
authors = [{ name = "Gergely Wootsch", email = "hello@gergely-wootsch.com" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: User Interfaces",
  "Topic :: System :: Monitoring",
  "Typing :: Typed",
]
dependencies = [
  "vaultspec-core>=0.1.31",
]
description = "Unified dashboard UI for the vaultspec ecosystem"
keywords = [
  "dashboard",
  "mcp",
  "observability",
  "rag",
  "ui",
  "vaultspec",
]
license = { file = "LICENSE" }
name = "vaultspec-dashboard"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"

  [project.urls]
  "Bug Tracker" = "https://github.com/wgergely/vaultspec-dashboard/issues"
  Documentation = "https://github.com/wgergely/vaultspec-dashboard/tree/main/README.md"
  Homepage = "https://github.com/wgergely/vaultspec-dashboard"
  Repository = "https://github.com/wgergely/vaultspec-dashboard"

  [project.scripts]
  vaultspec-dashboard = "vaultspec_dashboard.__main__:main"

  [project.optional-dependencies]
  dev = [
    "identify>=2.0.0",
    "mdformat>=1.0.0",
    "mdformat-frontmatter>=2.0.10",
    "mdformat-gfm>=1.0.0",
    "prek>=0.3.2",
    "pymarkdownlnt>=0.9.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-durations>=1.0.0",
    "pytest-reportlog>=0.4.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.2",
    "ty>=0.0.15",
  ]

[dependency-groups]
# Local dev tooling only (PEP 735); NOT published in the wheel's Requires-Dist.
# vaultspec-rag (semantic search) and its torch backend live here so they never
# become runtime or published dependencies of vaultspec-dashboard. The cu130
# torch source pin in [tool.uv.sources] applies because torch arrives through
# vaultspec-rag in this group.
dev = [
  "identify>=2.0.0",
  "mdformat>=1.0.0",
  "mdformat-frontmatter>=2.0.10",
  "mdformat-gfm>=1.0.0",
  "prek>=0.3.2",
  "pymarkdownlnt>=0.9.0",
  "pyright>=1.1.410",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-durations>=1.0.0",
  "pytest-reportlog>=0.4.0",
  "pytest-timeout>=2.4.0",
  "ruff>=0.15.2",
  "torch>=2.4",
  "ty>=0.0.15",
  "vaultspec-rag>=0.2.21",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/vaultspec_dashboard"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
log_cli = true
log_cli_date_format = "%H:%M:%S"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_level = "INFO"
log_file = "test-debug.log"
log_file_level = "DEBUG"
markers = [
  "unit: fast tests with no external dependencies",
  "integration: requires CLI tools and network",
  "e2e: end-to-end tests requiring real services",
  "timeout: timeout in seconds for individual tests",
]
testpaths = ["tests", "src"]
timeout = 300
timeout_func_only = true

[tool.ruff]
line-length = 88
target-version = "py313"

  [tool.ruff.lint]
  select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
    "RUF", # ruff-specific rules
    "N",   # pep8-naming
  ]
  unfixable = ["B"]

    [tool.ruff.lint.per-file-ignores]
    "**/test_*.py" = ["ARG"]
    "**/tests/**/*.py" = ["ARG"]

    [tool.ruff.lint.isort]
    known-first-party = ["vaultspec_dashboard"]

[tool.ty.environment]
python-version = "3.13"
root = [".", "src"]

# pyright is a SUPPLEMENTARY type checker (editor/IDE LSP + `just dev lint
# pyright`), not the enforced gate — Astral's `ty` (above) remains the gate in
# pre-commit and CI. pyright gives a second, widely-tooled lens during
# development; the two may differ at the margins, which is expected.
[tool.pyright]
include = ["src/vaultspec_dashboard"]
pythonVersion = "3.13"
typeCheckingMode = "standard"
venvPath = "."
venv = ".venv"

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130" },
]
