[project]
authors = [{ name = "Gergely Wootsch", email = "hello@gergely-wootsch.com" }]
dependencies = [
  "vaultspec-core>=0.1.36",
]
description = "Unified dashboard UI for the vaultspec ecosystem"
keywords = [
  "dashboard",
  "mcp",
  "observability",
  "rag",
  "ui",
  "vaultspec",
]
license = { file = "LICENSE" }
name = "vaultspec-dashboard"
readme = "README.md"
requires-python = ">=3.13"
version = "0.1.0"

  [project.urls]
  "Bug Tracker" = "https://github.com/nevenincs/vaultspec-dashboard/issues"
  Documentation = "https://github.com/nevenincs/vaultspec-dashboard/tree/main/README.md"
  Homepage = "https://github.com/nevenincs/vaultspec-dashboard"
  Repository = "https://github.com/nevenincs/vaultspec-dashboard"

# The published Python wheel (src/vaultspec_dashboard) was retired: the dashboard
# is the Rust engine (engine/) plus the TypeScript SPA (frontend/). This manifest
# now exists ONLY to manage the uv-provided dev toolchain — the vaultspec-core CLI,
# vaultspec-rag semantic search, and the markdown + pre-commit tooling — so it is a
# uv virtual project (not a package, never built or published).
[tool.uv]
package = false

[dependency-groups]
# Local dev tooling only (PEP 735). vaultspec-rag (semantic search) and its torch
# backend live here so they never become runtime or published dependencies. The
# cu130 torch source pin in [tool.uv.sources] applies because torch arrives through
# vaultspec-rag in this group.
dev = [
  "identify>=2.0.0",
  "mdformat>=1.0.0",
  "mdformat-frontmatter>=2.0.10",
  "mdformat-gfm>=1.0.0",
  "prek>=0.3.2",
  "pymarkdownlnt>=0.9.0",
  "torch>=2.4",
  "vaultspec-rag[mcp]>=0.2.28",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130" },
]
