[package]
name = "engine-graph"
description = "In-memory linkage graph: nodes, edges, facets, context assembly, filters. All queries answer from RAM; persistence is a rebuildable cache (engine-spec §8, D8.1)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
engine-model.workspace = true
engine-store.workspace = true
gix = "0.84.0"
ingest-core.workspace = true
ingest-git.workspace = true
ingest-struct.workspace = true
notify = "8"
rag-client.workspace = true
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"

[lints]
workspace = true

[dev-dependencies]
serde_json = "1.0.150"
tempfile = "3.27.0"
