[package]
name = "engine-model"
description = "Pure shared types for the vaultspec engine: Node, Edge, Tier, Provenance, ScopeRef. Zero I/O — the dependency sink every crate shares (engine-spec D9.1)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }

[lints]
workspace = true

[dev-dependencies]
serde_json = "1.0.150"
