[package]
name = "engine-query"
description = "The one shared query core behind both front doors (CLI and serve); the CLI and API crates contain no domain logic (engine-spec D6.1)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
engine-model.workspace = true
engine-graph.workspace = true
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
engine-store = { version = "0.1.0", path = "../engine-store" }
ingest-git = { version = "0.1.0", path = "../ingest-git" }

[dev-dependencies]
tempfile = "3.27.0"

# The salience feasibility benchmark (graph-node-salience W05.P11.S44):
# `harness = false` so it is a plain `main` printing wall-clock evidence (no
# Criterion, no flaky pass/fail gate), compiled by `cargo build --benches` /
# `cargo bench`. Mirrors the established no-wall-clock-ceiling bench convention.
[[bench]]
name = "salience_bench"
harness = false

[lints]
workspace = true
