[package]
name = "ingest-code"
description = "Code-corpus ingestion: in-process tree-sitter extraction of file-level import edges, containment, and module rollup nodes from the working tree (codebase-graphing ADR D2-D4). Fully disconnected from the vault LinkageGraph corpus."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
engine-model.workspace = true
rayon = "1.12.0"
streaming-iterator = "0.1.9"
thiserror = "2.0.18"
tree-sitter = "0.26.10"
tree-sitter-javascript = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-rust = "0.24.2"
tree-sitter-typescript = "0.23.2"

[lints]
workspace = true

[dev-dependencies]
tempfile = "3.27.0"
