[package]
name = "ingest-core"
description = "vaultspec-core CLI --json adapter: declared-tier ingestion via subprocess, pinned schema versions, loud failure on unknown schemas (engine-spec §5.1, D5.1)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
engine-model.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"

[lints]
workspace = true
