[package]
name = "ingest-core"
description = "vaultspec-core CLI --json adapter: declared-tier ingestion via subprocess, pinned schema versions, loud failure on unknown schemas (engine-spec §5.1, D5.1)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
engine-model.workspace = true
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"

# Unix-only: group-kill a timed-out core subprocess (and its shell grandchildren)
# so the deadline frees the reader thread instead of waiting on an orphan. nix's
# safe `killpg` wrapper avoids the workspace-forbidden `unsafe` a raw libc call needs.
[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal"] }

[lints]
workspace = true
