[package]
name = "ingest-git"
description = "Temporal-tier ingestion via pure-Rust gix: workspace discovery (common git dir), worktrees, refs, branch classification, temporal correlation rules (engine-spec §2, §5.3, D2.5)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
engine-model = { version = "0.1.0", path = "../engine-model" }
gix = "0.84.0"
rayon = "1.12.0"
thiserror = "2.0.18"

[lints]
workspace = true

[dev-dependencies]
tempfile = "3.27.0"
