[package]
name = "ingest-struct"
description = "Structural-tier ingestion: deterministic extraction of file paths, step identifiers, wiki-link stems, and symbols from document bodies, resolved against a scope's working tree (engine-spec §3)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
engine-model.workspace = true

[lints]
workspace = true
