[package]
name = "ingest-struct"
description = "Structural-tier ingestion: deterministic extraction of step identifiers and wiki-link stems from document bodies, resolved against a scope's working tree (engine-spec §3)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
engine-model.workspace = true
gix = "0.84.0"
rayon = "1.12.0"
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"

[lints]
workspace = true

[dev-dependencies]
tempfile = "3.27.0"
