[package]
name = "rag-client"
description = "Semantic-tier client for vaultspec-rag's resident loopback HTTP service: optional always, lazy, TTL-cached, never bundled (engine-spec §5.2, D3.5/D5.2)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
engine-model.workspace = true

[lints]
workspace = true
