[package]
name = "rag-client"
description = "Semantic-tier client for vaultspec-rag's resident loopback HTTP service: optional always, lazy, TTL-cached, never bundled (engine-spec §5.2, D3.5/D5.2)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
engine-model.workspace = true
engine-store = { version = "0.1.0", path = "../engine-store" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"

[lints]
workspace = true

[dev-dependencies]
engine-graph = { path = "../engine-graph" }
tempfile = "3.27.0"
