[package]
name = "vaultspec-api"
description = "The resident serve mode: single-origin loopback HTTP + JSON + SSE (axum). Serves the SPA bundle, the query API, the transparent ops proxy, and the SSE stream (engine-spec §7, contract §1)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
axum = "0.8.9"
engine-graph = { version = "0.1.0", path = "../engine-graph" }
engine-model = { version = "0.1.0", path = "../engine-model" }
engine-query = { version = "0.1.0", path = "../engine-query" }
engine-store = { version = "0.1.0", path = "../engine-store" }
futures-core = "0.3.32"
getrandom = "0.4.2"
gix = "0.84.0"
ingest-core = { version = "0.1.0", path = "../ingest-core" }
ingest-code = { version = "0.1.0", path = "../ingest-code" }
ingest-git = { version = "0.1.0", path = "../ingest-git" }
ingest-struct = { version = "0.1.0", path = "../ingest-struct" }
rag-client = { version = "0.1.0", path = "../rag-client" }
vaultspec-session = { version = "0.1.0", path = "../vaultspec-session" }
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt", "macros", "net", "sync", "time", "process", "io-util"] }
tokio-stream = { version = "0.1.18", features = ["sync"] }
tower-http = { version = "0.6.11", features = [
    "catch-panic",
    "compression-gzip",
    "set-header",
] }

[lints]
workspace = true

[dev-dependencies]
tempfile = "3.27.0"
tower = { version = "0.5.3", features = ["util"] }
