[package]
name = "vaultspec-cli"
description = "The `vaultspec` binary: one Rust binary, two front doors — one-shot CLI verbs and the resident serve mode (engine-spec D1.1). Verbs are thin shells over engine-query (D6.1)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "vaultspec"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
engine-graph = { version = "0.1.0", path = "../engine-graph" }
engine-model = { version = "0.1.0", path = "../engine-model" }
engine-query.workspace = true
engine-store = { version = "0.1.0", path = "../engine-store" }
ingest-core = { version = "0.1.0", path = "../ingest-core" }
ingest-git = { version = "0.1.0", path = "../ingest-git" }
rag-client = { version = "0.1.0", path = "../rag-client" }
serde_json = "1.0.150"
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["rt-multi-thread"] }
vaultspec-api.workspace = true

[lints]
workspace = true
