[package]
name = "vaultspec-distribution-authority"
description = "Offline TUF distribution authority for the six-member vaultspec release cohort."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[features]
# Non-production verification seam (S11 Stage 1). Exposes
# `verify_distribution_with_unsealed_root`, letting out-of-crate acceptance
# tests obtain a VerifiedDistributionRelease from a CALLER-supplied ephemeral
# test root — the embedded production root is empty by design until the key
# ceremony. Enabled ONLY under vaultspec-product's [dev-dependencies]; a
# compile-time assert proves it is off in the production dependency graph. The
# production entrypoint `verify_distribution` (distribution-trust D3) is
# unchanged and this seam performs the identical bounded verification.
unsealed-verify = []

[dependencies]
base64 = "0.22.1"
cap-std = "3.4.4"
futures-util = { version = "0.3.31", default-features = false, features = ["std"] }
fs4 = { version = "0.13", default-features = false, features = ["sync"] }
jiff = "0.2.15"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_jcs = "=0.2.0"
sha2 = { version = "0.10.9", default-features = false }
thiserror = "2.0.17"
tempfile = "3.27.0"
tokio = { version = "1.49.0", features = ["fs", "io-util", "rt", "time"] }
tough = { version = "=0.24.0", default-features = false }
url = "2.5.7"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", default-features = false, features = ["user"] }

[target.'cfg(windows)'.dependencies]
vaultspec-windows-authority = { path = "../vaultspec-windows-authority" }
windows-acl = "0.3.0"

[dev-dependencies]
aws-lc-rs = "1.16.0"
static_assertions = "1.1.0"
tokio = { version = "1.49.0", features = ["macros", "rt"] }

[lints]
workspace = true
