[package]
name = "vaultspec-product"
description = "Shared product-contract boundary for dashboard-owned A2A lifecycle, release-set, and update consumers."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
fs4 = { version = "0.13", default-features = false, features = ["sync"] }
getrandom = "0.4.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = { version = "0.10.9", default-features = false }
sysinfo = { version = "0.39.6", default-features = false, features = ["system"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", default-features = false, features = ["signal", "user"] }
rustix = { version = "=1.1.4", features = ["fs"] }

[target.'cfg(windows)'.dependencies]
command-group = { version = "5.0.1", default-features = false }
vaultspec-windows-authority = { path = "../vaultspec-windows-authority" }
windows-acl = "0.3.0"
winapi = "0.3.9"

[dev-dependencies]
# The S18 capsule-ownership acceptance test extracts a REAL built A2A desktop
# capsule (a DEFLATE zip) and its bundled CPython runtime (a gzip tar) to launch
# a real process tree from the capsule's own interpreter. Dev-only; the shipped
# crate depends on none of these.
flate2 = "1.0"
rusqlite = { version = "0.40.1", features = ["bundled"] }
tar = "0.4"
tempfile = "3.27.0"
zip = { version = "2.2", default-features = false, features = ["deflate"] }

[lints]
workspace = true
