[package]
name = "vaultspec-product"
description = "Shared product-contract boundary for dashboard-owned A2A lifecycle, release-set, and update consumers."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# The archive materializer decodes the one admitted Deflate stream with
# counted output (archive-materialization D2); no extraction helper is used.
flate2 = "1.0"
fs4 = { version = "0.13", default-features = false, features = ["sync"] }
getrandom = "0.4.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
# RFC 8785 JSON Canonicalization Scheme — the cohort-digest preimage MUST be JCS
# bytes; the canonical form is never hand-rolled (same crate the distribution
# authority uses).
serde_jcs = "=0.2.0"
sha2 = { version = "0.10.9", default-features = false }
sysinfo = { version = "0.39.6", default-features = false, features = ["system"] }
# Types only: the opaque MaterializationSource capability. tough and its
# async runtime stay isolated behind the distribution-authority boundary.
vaultspec-distribution-authority = { path = "../vaultspec-distribution-authority" }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", default-features = false, features = ["signal", "user"] }
rustix = { version = "=1.1.4", features = ["fs"] }

[target.'cfg(windows)'.dependencies]
command-group = { version = "5.0.1", default-features = false }
vaultspec-windows-authority = { path = "../vaultspec-windows-authority" }
windows-acl = "0.3.0"
winapi = "0.3.9"

[dev-dependencies]
# S11 Stage 1: the `unsealed-verify` seam is a NON-production, test-only entry
# (verify_distribution_with_unsealed_root). Enabling it here — dev-dependencies
# ONLY — turns it on for this crate's own acceptance tests while resolver v3
# keeps it OFF in every production build; the api crate compile-time-asserts
# that (DISTRIBUTION_UNSEALED_VERIFY_ENABLED).
vaultspec-distribution-authority = { path = "../vaultspec-distribution-authority", features = [
    "unsealed-verify",
] }
# The S18 capsule-ownership acceptance test extracts a REAL built A2A desktop
# capsule (a DEFLATE zip) and its bundled CPython runtime (a gzip tar) to launch
# a real process tree from the capsule's own interpreter. Dev-only; the shipped
# crate depends on none of these.
rusqlite = { version = "0.40.1", features = ["bundled"] }
tar = "0.4"
tempfile = "3.27.0"
zip = { version = "2.2", default-features = false, features = ["deflate"] }

[lints]
workspace = true
