[package]
name = "vaultspec-release-fixtures"
description = "Dev-only scaffolding that builds real signed TUF release repositories for cross-crate tests."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
# Never published: this exists only to be dev-depended on.
publish = false

[dependencies]
aws-lc-rs = "1.16.0"
base64 = "0.22.1"
jiff = "0.2.15"
# The bound on `read_signed`: a caller names the role type, so the helper needs
# `DeserializeOwned` by name rather than through `serde_json`'s inference.
serde = "1.0.228"
serde_json = "1.0.150"
sha2 = { version = "0.10.9", default-features = false }
tough = { version = "=0.24.0", default-features = false }
vaultspec-distribution-authority = { path = "../vaultspec-distribution-authority" }

[lints]
workspace = true
